# jarvis

./: .gitignore  AGENTS.md  README.md  Task.py  check_env.py  jarvis.py  pyproject.toml  requirements.txt  settings.py  test_execute_code.py  test_ollama_chat.py  test_run.py  test_settings.py
agents/: __init__.py  execution.py  jarvis.py
autonomous/: activity_log.py  ambient_monitor.py  approval_gate.py  scheduler.py  task_queue.py
brain/: __init__.py  context_manager.py  ollama_client.py  prompt_builder.py  response_parser.py  structured_log.py  tool_result_cache.py
core/: classifier.py  console.py  health_check.py  heartbeat_monitor.py  orchestrator.py  reporter.py  system_state.py  task_registry.py  thread_db.py
indexer/: app_scanner.py  file_scanner.py  pc_indexer.py  state_monitor.py  write_queue.py
memory/: episodic.py  memory_manager.py  semantic.py
output/: formatter.py  tts.py  tts_piper.py
perception/: input_handler.py  stt.py  wake_word.py
prompts/: executor.yaml  jarvis.yaml
safety/: __init__.py  audit_log.py  confidence_gate.py  executor.py  plan_validator.py  risk_classifier.py  tool_guard.py
skills/: skill_runner.py  skill_store.py
tests/: test_autonomous.py  test_batch_plan.py  test_brain.py  test_execute_code_unicode.py  test_indexer.py  test_integration_full.py  test_memory_voice.py  test_orchestrator.py  test_phase5_wiring.py  test_safety_audit.py  test_safety_blocks_dangerous.py  test_setup.py  test_skills.py  test_tools.py
tools/: __init__.py  adapters.py  schemas.json
verification/: __init__.py  state_checks.py  verifier.py  (+1 more)
(+19 files in other folders)
