[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.2.0"
description = "Autonomous voice assistant powered by Nemotron - generates PowerShell for PC control"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["voice-assistant", "ai", "personal-assistant", "nemotron", "powershell"]

[tool.setuptools.packages.find]
exclude = ["voices*", "piper_bin*", "venv*", "logs*", "reminders*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | venv
  | build
  | dist
  | voices
  | piper_bin
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint."MESSAGES CONTROL"]
disable = ["C0111", "R0903"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
